# autara-lending-v1

./: .dockerignore  .gitignore  CURATOR.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  doc.txt  entrypoint.sh  market-config-template.jsonc  markets.json  tokens.json
.github/workflows/: _autara-action.yml  autara-ci.yml  autara-deploy.yml  autara-e2e.yml  autara-initialize.yml  autara-setup-markets.yml  autara-upgrade.yml
autara-client/: Cargo.toml
autara-client/examples/: e2e_flow.rs  fund_signer.rs  keygen.rs  print_pubkey.rs  shared_loss_flow.rs  xfer.rs
autara-client/src/: config.rs  filter.rs  idl_deploy.rs  lib.rs  main.rs  rpc_ext.rs  test.rs  token_mint.rs
autara-client/src/api/: api.rs  market.rs  mod.rs  serde_helper.rs  server.rs  tracing.rs  types.rs
autara-client/src/client/: blockhash_cache.rs  client_with_signer.rs  client_without_signer.rs  mod.rs  read.rs  shared_autara_state.rs  single_thread_client.rs  tx_broadcast.rs  tx_builder.rs
autara-client/src/prometheus/: autara_indexer.rs  exporter.rs  market_metrics.rs  mod.rs  ops_metrics.rs  position_metrics.rs
autara-deploy/: .gitignore  Cargo.toml  KEY_ROTATION.md
autara-deploy/scripts/: DEPLOY.md  autara.env.example  autara.mainnet.env  autara.pusher.mainnet.env  autara.pusher.testnet.env  autara.server.mainnet.env  autara.testnet.ausd-abtc.env  autara.testnet.env  autara.testnet.fresh.env  ci-load-env.sh  ci-summary.py  deploy.sh  provision-pusher-signer.sh  set-github-secrets.sh  sync-program-id.sh
autara-deploy/src/: artifact.rs  config.rs  main.rs  rpc.rs  steps.rs  verify.rs
autara-integration-tests/: Cargo.toml
autara-integration-tests/tests/: tests.rs
autara-integration-tests/tests/autara/: borrow.rs  collateral.rs  composed.rs  create_market.rs  fees.rs  lend.rs  liquidate.rs  mod.rs  socialize_loss.rs  update_config.rs
autara-integration-tests/tests/fixture/: autara_fixture.rs  balance.rs  mod.rs  oracle.rs
autara-lib/: Cargo.toml
autara-lib/src/: const_assert.rs  constant.rs  error.rs  event.rs  idl_blob_layout.rs  lib.rs  metrics.rs  padding.rs  pda.rs  pod_option.rs  safety_tests.rs  token.rs
autara-lib/src/interest_rate/: interest_rate.rs  interest_rate_kind.rs  interest_rate_per_second.rs  lending_interest_rate.rs  mod.rs  pod_interest_rate.rs
autara-lib/src/interest_rate/curve/: adaptative_curve.rs  mod.rs  polyline.rs
autara-lib/src/ixs/: admin.rs  borrow.rs  liquidation.rs  log.rs  market.rs  mod.rs  supply.rs  types.rs
autara-lib/src/math/: bps.rs  const_max.rs  ifixed_point.rs  macros.rs  mod.rs  pod.rs  rounding.rs  safe_math.rs  shares_tracker.rs  test_utils.rs  ufixed_point.rs
autara-lib/src/operation/: liquidation.rs  mod.rs
autara-lib/src/oracle/: chaos.rs  mod.rs  oracle_config.rs  oracle_price.rs  oracle_provider.rs  pod_oracle_provider.rs  pyth.rs
autara-lib/src/state/: borrow_position.rs  collateral_vault.rs  global_config.rs  market.rs  market_config.rs  market_wrapper.rs  mod.rs  supply_position.rs  supply_vault.rs
autara-liquidator/: Cargo.toml  README.md  liquidator-config.example.json
autara-liquidator/src/: config.rs  main.rs  preflight.rs  propamm.rs  router.rs  scanner.rs
autara-program-lib/: Cargo.toml
autara-program-lib/src/accounts/: borsh.rs  mod.rs  packed.rs  program.rs  signer.rs  token.rs  zero_copy.rs
autara-pyth/: Cargo.toml
autara-pyth/examples/: check_feed_age.rs  check_feed_layout.rs
autara-pyth/src/: lib.rs  main.rs  metrics.rs
deployments/: mainnet.json  test-mainnet.json  testnet-ausd-abtc.json  testnet-fresh.json
docs/: CURATOR_IDENTITY.md  PROMETHEUS_MONITORING.md  RAILWAY_HARDENING.md  SHARED_LOSS.md  deploy-market.md  idl-decoding-plan.md  oracle-pusher.md  prometheus-alerts.yml
docs/superpowers/specs/: 2026-06-02-liquidator-clamm-testnet4-design.md
idl/: README.md  autara-idl-import.json  autara_lending.idl.json
keys/: autara-admin-stage.key  autara-cli-signer.key  autara-deployer.key  autara-pyth-stage.key  autara-stage.key  autara-token-authority.key  curator-balanced.key  curator-conservative.key  token-ausd-authority.key  token-ausd.key  token-btc-authority.key  token-btc.key  token-eth.key  token-usdc-authority.key  token-usdc.key  token-usdt-authority.key  token-usdt.key
programs/autara-oracle/: Cargo.toml
programs/autara-oracle/src/: lib.rs
programs/autara-program/: Cargo.toml
programs/autara-program/src/: error.rs  lib.rs  log.rs  state.rs  utils.rs
programs/autara-program/src/ixs/: borrow_apl.rs  borrow_deposit_apl.rs  create_borrow_position.rs  create_global_config.rs  create_market.rs  create_supply_position.rs  deposit_apl_collateral.rs  donate_supply.rs  liquidate.rs  log.rs  mod.rs  redeem_curator_fees.rs  redeem_protocol_fees.rs  repay_apl.rs  socialize_loss.rs  supply_apl.rs  test_utils.rs  update_config.rs  update_global_config.rs  withdraw_apl_collateral.rs  withdraw_repay_apl.rs  withdraw_supply.rs
programs/autara-program/src/processor/: borrow_apl.rs  borrow_deposit_apl.rs  create_borrow_position.rs  create_global_config.rs  create_market.rs  create_supply_position.rs  deposit_apl_collateral.rs  donate_supply.rs  idl.rs  liquidate.rs  mod.rs  redeem_curator_fees.rs  redeem_protocol_fees.rs  repay_apl.rs  socialize_loss.rs  supply_apl.rs  update_config.rs  update_global_config.rs  withdraw_apl_collateral.rs  withdraw_repay_apl.rs  withdraw_supply.rs
scripts/: liq-test-suite.mjs
src/lib/autara/: create-services.ts  index.ts
src/lib/autara/actions/: borrower-actions.ts  lender-actions.ts  market-actions.ts
src/lib/autara/domain/: errors.ts  index.ts  result.ts
src/lib/autara/domain/borrower/: borrow-health.ts  borrow-position.ts  borrower-types.ts
src/lib/autara/domain/lender/: lender-types.ts  supply-position.ts
src/lib/autara/domain/market/: collateral-vault.ts  market-config.ts  (+2 more)
src/lib/autara/services/: borrower-service.ts  callbacks.ts  lender-service.ts  market-service.ts
src/lib/autara/state/: market-store.ts  optimistic.ts  position-store.ts
tmp-autara-liquidator/: Cargo.toml
tmp-autara-liquidator/src/: main.rs
(+14 files in other folders)
