[package]
name = "autara-client"
version = "0.1.0"
edition = "2021"

[dependencies]

tracing-subscriber = { workspace = true, features = ["fmt"] }
tracing = { workspace = true }
autara-lib = { workspace = true , features = ["client"] }
autara-pyth = { workspace = true }

arch_sdk = { workspace = true }
apl-token = { workspace = true }
bitcoincore-rpc-async = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
auto_impl = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
autara-program = { workspace = true }
regex = { workspace = true }
pin-project = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
futures = { workspace = true }
