[package]
name = "autara-lib"
version = "0.1.0"
edition = "2021"

[features]

default = []
client = ["serde", "serde_with", "tracing" , "arch_sdk"]
test-utils = []

[dependencies]

arch_program = { workspace = true }
apl-token = { workspace = true }

fixed = { workspace = true }
bytemuck = { workspace = true }
borsh = { workspace = true }
arrayref = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
num_enum = { workspace = true }
apl-associated-token-account.workspace = true
tracing = { workspace = true, optional = true  }
serde = { workspace = true, optional = true }
serde_with = {  workspace = true, optional = true }
arch_sdk = { workspace = true, optional = true  }
