[package]
name = "autara-liquidator"
version = "0.1.0"
edition = "2024"

[dependencies]
autara-client = { workspace = true }
autara-lib = { workspace = true, features = ["client"] }
arch_sdk = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }

orca_whirlpools = { path = "../../CLAMM/rust-sdk/whirlpool" }
