[package]
name = "autara-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]

entrypoint = []

[dependencies]

autara-lib.workspace = true
autara-program-lib.workspace = true

arch_program.workspace = true
apl-token.workspace = true

borsh.workspace = true
bytemuck.workspace = true
num_enum.workspace = true
hex-literal.workspace = true
